--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,26 @@ title = "my note for CS224n of stanford"
 theme = "docdock"
 themesDir = "themes"
 publishDir = "docs"
+pygmentsCodeFences = true
+pygmentsStyle = "monokailight"
+
+defaultContentLanguage = "en"
+defaultContentLanguageInSubdir= false
+enableMissingTranslationPlaceholders = false
+
+
+# [Languages]
+# [Languages.en]
+# title = "Documentation for Hugo docDock"
+# weight = 1
+# languageName = "English"
+#
+# [Languages.fr]
+# title = "Documentation du thème docDock"
+# weight = 2
+# languageName = "Français"
+
+
 
 [params]
 editURL = "https://github.com/hyunyoung2/my-note-for-cs224n-stanford/edit/master/content/"
@@ -16,9 +36,9 @@ ordersectionsby = "weight" # ordersectionsby = "title"
 disableHomeIcon = false # default is false
 disableSearch = true # default is false
 disableNavChevron = false # set true to hide next/prev chevron, default is false
-
-
-
+highlightClientSide = false # set true to use highlight.pack.js instead of the default hugo chroma highlighter
+menushortcutsnewtab = false # set true to open shortcuts links to a new tab/window
+enableGitInfo = true
 
 
 [outputs]
